force-app/main/default/objects/PreFetchedVolumes__c/PreFetchedVolumes__c.object-meta.xml
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <description>This is a protected custom setting to store list of prefetched volumes with repository cloned</description>
    <label>Pre Fetched Volumes</label>
</CustomObject>