force-app/main/default/objects/PreFetchedVolumes__c/fields/Pipeline_Id__c.field-meta.xml
<CustomField>
    <fullName>Pipeline_Id__c</fullName>
    <label>Pipeline Id</label>
    <length>18</length>
    <required>true</required>
    <type>Text</type>
</CustomField>