force-app/main/default/objects/PreFetchedVolumes__c/fields/Volume_Id__c.field-meta.xml
<CustomField>
    <fullName>Volume_Id__c</fullName>
    <label>Volume Id</label>
    <length>80</length>
    <type>Text</type>
</CustomField>